# statement/src/main/java/neoflex/chulkov/api/StatementApiDelegateImpl.java
@@ -2,9 +2,10 @@ package neoflex.chulkov.api;
 
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
-import neoflex.chulkov.client.DealRestClient;
 import neoflex.chulkov.dto.LoanOfferDto;
 import neoflex.chulkov.dto.LoanStatementRequestDto;
+import neoflex.chulkov.service.StatementService;
+import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
 import org.springframework.stereotype.Service;
 
@@ -15,21 +16,22 @@ import java.util.List;
 @RequiredArgsConstructor
 public class StatementApiDelegateImpl implements StatementApiDelegate {
 
-    private final DealRestClient dealRestClient;
+    private final StatementService statementService;
 
     @Override
-    public ResponseEntity<List<LoanOfferDto>> statement(
+    public ResponseEntity<List<LoanOfferDto>> getAvailableCreditOffers(
             LoanStatementRequestDto loanStatementRequestDto
     ) {
         log.info("called /statement with request = {}", loanStatementRequestDto);
-        List<LoanOfferDto> response = dealRestClient.getAvailableOffers(loanStatementRequestDto);
+        List<LoanOfferDto> response = statementService.getAvailableOffers(loanStatementRequestDto);
         return ResponseEntity.ok(response);
     }
 
     @Override
-    public ResponseEntity<Void> select(
+    public ResponseEntity<Void> selectCreditOffer(
             LoanOfferDto loanOfferDto
     ) {
-        return StatementApiDelegate.super.select(loanOfferDto);
+        log.info("called /statement/offer with request = {}", loanOfferDto);
+        return ResponseEntity.status(HttpStatus.ACCEPTED).build();
     }
 }
