# statement/src/main/java/neoflex/chulkov/exception/GlobalExceptionHandler.java
@@ -10,12 +10,6 @@ import org.springframework.web.bind.annotation.RestControllerAdvice;
 
 @RestControllerAdvice
 public class GlobalExceptionHandler {
-    @ExceptionHandler(ScoringException.class)
-    public ResponseEntity<ErrorResponseDto> handleScoringException(ScoringException e) {
-        ErrorResponseDto response = new ErrorResponseDto(
-                HttpStatus.UNPROCESSABLE_ENTITY.value(), e.getMessage(), "Не прошёл скоринг");
-        return ResponseEntity.status(HttpStatus.UNPROCESSABLE_ENTITY).body(response);
-    }
     @ExceptionHandler(MethodArgumentNotValidException.class)
     public ResponseEntity<ErrorResponseDto> handleMethodArgumentNotValidException(MethodArgumentNotValidException e) {
         ErrorResponseDto response = new ErrorResponseDto(
